--- a/src/gui/LoginScreen.fxml
+++ b/src/gui/LoginScreen.fxml
@@ -11,95 +11,103 @@
 <?import org.controlsfx.control.textfield.CustomPasswordField?>
 <?import org.controlsfx.control.textfield.CustomTextField?>
 <fx:root type="AnchorPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <GridPane alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="497.0" prefWidth="419.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="439.0" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="10.0" valignment="CENTER" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="112.0" minHeight="10.0" prefHeight="112.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="87.0" minHeight="0.0" prefHeight="20.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints fillHeight="false" minHeight="5.0" prefHeight="5.0" valignment="TOP" vgrow="SOMETIMES" />
-            <RowConstraints fillHeight="false" minHeight="2.0" prefHeight="2.0" valignment="TOP" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <GridPane prefHeight="21.0" prefWidth="439.0" GridPane.rowIndex="7">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints fillHeight="false" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                 <Hyperlink fx:id="urlForgotPassword" onAction="#retrievePassword" text="Forgot password?" GridPane.columnIndex="1" GridPane.halignment="RIGHT">
-                     <GridPane.margin>
-                        <Insets right="50.0" />
-                     </GridPane.margin>
-                  </Hyperlink>
-               </children>
-            </GridPane>
-            <Label text="Intelligent Inventory Manager" GridPane.halignment="CENTER" GridPane.rowIndex="1">
-               <font>
-                  <Font size="20.0" />
-               </font>
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-               <GridPane.margin>
-                  <Insets left="50.0" right="50.0" />
-               </GridPane.margin>
-            </Label>
-            <CustomTextField fx:id="txfUsername" onKeyPressed="#textfield_KeyPress" promptText="Username" text="" GridPane.rowIndex="4">
-               <GridPane.margin>
-                  <Insets bottom="50.0" left="50.0" right="50.0" top="50.0" />
-               </GridPane.margin>
-               <padding>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </padding>
-            </CustomTextField>
-            <CustomPasswordField fx:id="txfPassword" onKeyPressed="#textfield_KeyPress" promptText="Password" text="" GridPane.rowIndex="5">
-               <GridPane.margin>
-                  <Insets bottom="50.0" left="50.0" right="50.0" top="50.0" />
-               </GridPane.margin>
-               <padding>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </padding>
-            </CustomPasswordField>
-            <Button fx:id="btnLogin" mnemonicParsing="false" onAction="#login" prefHeight="106.0" prefWidth="452.0" text="Login" GridPane.rowIndex="6">
-               <GridPane.margin>
-                  <Insets bottom="50.0" left="50.0" right="50.0" top="50.0" />
-               </GridPane.margin>
-               <padding>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </padding>
-            </Button>
-            <Label fx:id="lblError" text="ErrorMessage" textFill="#c09853" wrapText="true" GridPane.rowIndex="3">
-               <GridPane.margin>
-                  <Insets left="50.0" right="50.0" />
-               </GridPane.margin>
-               <font>
-                  <Font size="13.0" />
-               </font>
-            </Label>
-            <ImageView fx:id="imgThumbnail" fitHeight="109.0" fitWidth="297.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="TOP">
-               <image>
-                  <Image url="@images/logo.png" />
-               </image>
-               <GridPane.margin>
-                  <Insets left="10.0" right="10.0" />
-               </GridPane.margin>
-            </ImageView>
-            <AnchorPane GridPane.rowIndex="1" />
-         </children>
-         <padding>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </padding>
-      </GridPane>
-   </children>
+    <children>
+        <GridPane alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="497.0"
+                  prefWidth="419.0">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="439.0" minWidth="10.0" prefWidth="100.0"/>
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="10.0" valignment="CENTER" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints maxHeight="112.0" minHeight="10.0" prefHeight="112.0" vgrow="SOMETIMES"/>
+                <RowConstraints maxHeight="87.0" minHeight="0.0" prefHeight="20.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints fillHeight="false" minHeight="5.0" prefHeight="5.0" valignment="TOP" vgrow="SOMETIMES"/>
+                <RowConstraints fillHeight="false" minHeight="2.0" prefHeight="2.0" valignment="TOP" vgrow="SOMETIMES"/>
+            </rowConstraints>
+            <children>
+                <GridPane prefHeight="21.0" prefWidth="439.0" GridPane.rowIndex="7">
+                    <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints fillHeight="false" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                    </rowConstraints>
+                    <children>
+                        <!--
+                        <Hyperlink fx:id="urlForgotPassword" onAction="#retrievePassword" text="Wachtwoord vergeten?" GridPane.columnIndex="1" GridPane.halignment="RIGHT">
+                          <GridPane.margin>
+                             <Insets right="50.0" />
+                          </GridPane.margin>
+                       </Hyperlink>
+                       -->
+                    </children>
+                </GridPane>
+                <Label text="Intelligent Inventory Manager" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                    <font>
+                        <Font size="20.0"/>
+                    </font>
+                    <opaqueInsets>
+                        <Insets/>
+                    </opaqueInsets>
+                    <GridPane.margin>
+                        <Insets left="50.0" right="50.0"/>
+                    </GridPane.margin>
+                </Label>
+                <CustomTextField fx:id="txfUsername" onKeyPressed="#textfield_KeyPress" promptText="Gebruikersnaam" text=""
+                                 GridPane.rowIndex="4">
+                    <GridPane.margin>
+                        <Insets bottom="50.0" left="50.0" right="50.0" top="50.0"/>
+                    </GridPane.margin>
+                    <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                    </padding>
+                </CustomTextField>
+                <CustomPasswordField fx:id="txfPassword" onKeyPressed="#textfield_KeyPress" promptText="Wachtwoord"
+                                     text="" GridPane.rowIndex="5">
+                    <GridPane.margin>
+                        <Insets bottom="50.0" left="50.0" right="50.0" top="50.0"/>
+                    </GridPane.margin>
+                    <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                    </padding>
+                </CustomPasswordField>
+                <Button fx:id="btnLogin" mnemonicParsing="false" onAction="#login" prefHeight="106.0" prefWidth="452.0"
+                        text="Aanmelden" GridPane.rowIndex="6">
+                    <GridPane.margin>
+                        <Insets bottom="50.0" left="50.0" right="50.0" top="50.0"/>
+                    </GridPane.margin>
+                    <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                    </padding>
+                </Button>
+                <Label fx:id="lblError" text="ErrorMessage" textFill="#c09853" wrapText="true" GridPane.rowIndex="3">
+                    <GridPane.margin>
+                        <Insets left="50.0" right="50.0"/>
+                    </GridPane.margin>
+                    <font>
+                        <Font size="13.0"/>
+                    </font>
+                </Label>
+                <ImageView fx:id="imgThumbnail" fitHeight="109.0" fitWidth="297.0" pickOnBounds="true"
+                           preserveRatio="true" GridPane.halignment="CENTER" GridPane.rowIndex="2"
+                           GridPane.valignment="TOP">
+                    <image>
+                        <Image url="@images/logo.png"/>
+                    </image>
+                    <GridPane.margin>
+                        <Insets left="10.0" right="10.0"/>
+                    </GridPane.margin>
+                </ImageView>
+                <AnchorPane GridPane.rowIndex="1"/>
+            </children>
+            <padding>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+            </padding>
+        </GridPane>
+    </children>
 </fx:root>
